--- a/Develop/style.css
+++ b/Develop/style.css
@@ -3,6 +3,27 @@ body {
   font-size: 16px;
 }
 
+header {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+div.key {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.key {
+  background-color: grey;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px 10px 1px 10px;
+}
+
 textarea {
   background: transparent;
   border: none;
